# schrottbar

./: CLAUDE.md  Cargo.toml  dev.sh
examples/: polygon_debug.rs
src/: bar.rs  error.rs  lib.rs  main.rs  renderer.rs  section_writer.rs  state_item.rs  types.rs  wayland.rs
src/compositor/: mod.rs  niri.rs  window_title.rs
src/items/: hspace.rs  mod.rs  network.rs  niri.rs  pulseaudio.rs  system.rs  test_display.rs  time.rs  tray.rs  updates.rs  weather_icons.rs  windows.rs  workspaces.rs
src/items/paymo/: mod.rs  paymo.rs
src/items/weather/: mod.rs  openmeteo.rs  wttrin.rs
src/utils/: config.rs  mod.rs  spinner.rs  time.rs
