[package]
name = "schrottbar"
version = "0.1.0"
edition = "2024"

[dependencies]
# Wayland
wayland-client = "0.31"
smithay-client-toolkit = "0.19"

# Rendering
tiny-skia = "0.11"
cosmic-text = "0.12"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Compositor
niri-ipc = "25.11"

# Status items
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.29"
regex = "1"
simplelog = "0.12"
dirs = "5"
unicode-segmentation = "1"
log = "0.4"
